# stay-awake

./: .gitignore  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.cjs  package-lock.json  package.json  release-please-config.json
.github/: FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  distribute.yml  release-please.yml  release.yml  version.yml
choco/: non-sleep.nuspec  stay-awake.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
docs/: user-guide.md
src/: about.css  about.html  about.js  index.html  main.js  settings.css  settings.html  settings.js
src-tauri/: CHANGELOG.md  Cargo.toml  Entitlements.plist  Info.plist  audit.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: de.ftl  en.ftl  es.ftl  fr.ftl  ja.ftl  ko.ftl  pt-BR.ftl  zh-Hans.ftl
src-tauri/src/: config.rs  corewlan_bridge.m  engine.rs  i18n.rs  lib.rs  main.rs  wifi.rs
src-tauri/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/fonts/: phosphor.css
winget/: shoootyou.NoSleepPlease.yaml  shoootyou.StayAwake.yaml
