[package]
name = "stay-awake"
version = "1.0.0"
description = "macOS mouse jiggler and anti-inactivity tool"
authors = ["Rodolfo Castelo <shoootyou>"]
edition = "2021"
license = "MIT"

[lib]
name = "stay_awake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sys-locale = "0.3"
log = "0.4"
env_logger = "0.11"
rand = "0.9"
fluent = "0.16"
fluent-bundle = "0.15"
fluent-langneg = "0.14"
unic-langid = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tauri-plugin-shell = "2.3.5"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication", "NSMenu"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1

